Интерфейс "Деканат" и "Зам. декана": 1. Исправления в разделе "Группы": реализован вывод уведомлений при некорректном заполнении последнего дня сессии и изменение цвета кнопки "Сохранить" при актуализации списков студентов. Также добавлен поиск учебных планов в соответствии с годом набора. 2. Раздел "Сессии" изменён для двух интерфейсов

--- a/src/main/resources/static/Templates/deputyDeanSessionStatement.html
+++ b/src/main/resources/static/Templates/deputyDeanSessionStatement.html
@@ -1,7 +1,8 @@
 <div ng-show="ur == 'DEPUTY_DEAN'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="deputyDeanSessionStatements">Сессионные ведомости</a></li>
+        <li class="breadcrumb-item"><a ui-sref="deputyDeanSessionGroups">Список групп</a></li>
+        <li class="breadcrumb-item"><a ui-sref="deputyDeanSessionStatements({groupId: groupId})">Сессионные ведомости</a></li>
         <li class="breadcrumb-item active" aria-current="page">Просмотр сессионной ведомости</li>
     </ol>
 
