--- a/src/main/resources/static/Templates/sessionStatementDeanery.html
+++ b/src/main/resources/static/Templates/sessionStatementDeanery.html
@@ -1,7 +1,8 @@
 <div ng-show="ur == 'DEANERY'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="sessionStatementsDeanery">Сессионные ведомости</a></li>
+        <li class="breadcrumb-item"><a ui-sref="sessionGroupsDeanery">Список групп</a></li>
+        <li class="breadcrumb-item"><a ui-sref="sessionStatementsDeanery({groupId: groupId})">Сессионные ведомости</a></li>
         <li class="breadcrumb-item active" aria-current="page">Просмотр сессионной ведомости</li>
     </ol>
 
