--- a/src/main/resources/static/Styles/main.css
+++ b/src/main/resources/static/Styles/main.css
@@ -1,10 +1,7 @@
 .view {
     /*background: url(/Images/youtube.png) 0 0 repeat;*/
     /*background: url(/Images/simple.jpg) no-repeat center / cover;*/
-
     background: linear-gradient(135deg, #FFFFFF, #F3F8FD);
-
-
     padding: 10px;
     /*width: 100vw;*/
     min-height: calc(100vh - 314px) !important; /*331*/
@@ -16,6 +13,8 @@
     min-height: 105px;
     overflow: auto;
 }
+
+/*textarea:focus, input:focus*/.form-control:focus { box-shadow: 0 0 0 0 !important; } /*убрать рамку чекбоксов после нажатия*/
 
 @media (max-width: 1065px) {
     .table-container-link-attestation {
