Обновлены все интерфейсы в связи с добавлением чекбокса "Дистанционная" для сущности "Аттестация".

--- a/src/main/resources/static/Templates/arrangeCertification.html
+++ b/src/main/resources/static/Templates/arrangeCertification.html
@@ -15,7 +15,7 @@
                            class="form-control"
                            ng-class="{'is-invalid': arrangeCertificationForm.name.$dirty && arrangeCertificationForm.name.$invalid,
                                       'is-valid': arrangeCertificationForm.name.$dirty}"
-                           ng-model="name"
+                           ng-model="arrangeCertification.name"
                            name="name"
                            id="labelName"
                            placeholder="введите название аттестации"
@@ -35,7 +35,7 @@
                            class="form-control"
                            ng-class="{'is-invalid': arrangeCertificationForm.deadline.$dirty && arrangeCertificationForm.deadline.$invalid,
                                       'is-valid': arrangeCertificationForm.deadline.$dirty}"
-                           ng-model="deadline"
+                           ng-model="arrangeCertification.deadline"
                            min="{{minDate | date:'yyyy-MM-dd'}}"
                            max="{{minDate | date:'2055-MM-dd'}}"
                            name="deadline"
@@ -43,6 +43,18 @@
                            required>
                     <div class="invalid-tooltip py-0">
                         Необходимо выбрать дату (мин. зн.: {{minDate | date:'dd-MM-yyyy'}})
+                    </div>
+                </div>
+                <div class="col-md-12 pl-0 pt-4">
+                    <div class="form-check">
+                        <input type="checkbox"
+                               ng-model="arrangeCertification.distant"
+                               name="distant"
+                               class="form-check-input"
+                               value=""
+                               id="labelDistant"
+                               checked>
+                        <label class="form-check-label" for="labelDistant">Дистанционная аттестация</label>
                     </div>
                 </div>
 
