--- a/src/main/resources/static/Templates/listAttestation.html
+++ b/src/main/resources/static/Templates/listAttestation.html
@@ -14,6 +14,7 @@
                 <th class="text-center border-white">Название</th>
                 <th class="text-center border-white">Факультет</th>
                 <th class="text-center border-white">Дата окончания аттестации</th>
+                <th class="text-center border-white">Дистанционная аттестация</th>
                 <th class="border-white"></th>
             </tr>
             </thead>
@@ -28,6 +29,13 @@
                 <td class="text-center border-info">{{attestation.faculty.shortName}} ({{attestation.faculty.fullName}})</td>
                 <td class="text-center border-info">
                     {{attestation.deadline | date: 'dd.MM.yyyy'}}
+                </td>
+                <td class="text-center border-info">
+                    <input type="checkbox"
+                           class="form-control form-control-sm"
+                           name="distant"
+                           ng-model="attestation.distant"
+                           disabled>
                 </td>
                 <td class="text-center border-info py-2">
                     <a class="btn btn-info text-white"
