--- a/src/main/resources/static/Templates/studentsDeputyDean.html
+++ b/src/main/resources/static/Templates/studentsDeputyDean.html
@@ -1,7 +1,7 @@
 <div ng-show="ur == 'DEPUTY_DEAN'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="groupsDeputyDean">Список групп</a></li>
+        <li class="breadcrumb-item"><a ui-sref="groupsDeputyDean">Список учебных планов</a></li>
         <li class="breadcrumb-item active" aria-current="page">Список студентов</li>
     </ol>
 
