--- a/src/main/resources/static/Templates/groupsDeputyDean.html
+++ b/src/main/resources/static/Templates/groupsDeputyDean.html
@@ -47,7 +47,11 @@
                                title="При возникновении ошибок в высчитывании (предполагаемого) текущего семестра просьба обратиться к администратору">
                             </i>
                         </th>
-                        <th class="text-center border-white" style="min-width: 10em">Конец семестра</th>
+                        <th class="text-center border-white" style="min-width: 10em">Конец семестра
+                            <i class="fa fa-info-circle text-info" data-toggle="tooltip" data-placement="top"
+                               title="До этой даты (не включая) у преподавателей имеется возможность вносить изменения в ведомости">
+                            </i>
+                        </th>
                         <th class="text-center border-white"></th>
                     </tr>
                     </thead>
